--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
                <div class="first col-md-3" style="float:left;width:33.3%;">
                  <h3>Backend</h3>
                  <ul class="list">
-                   <li>Core Java</li>
+                   <li>Java</li>
                    <li>PHP</li>
                    <li>node.js</li>
+                   <li>Python</li>
                  </ul> 
                </div>
                <div class="second col-md-3" style="float:left;width:33.3%;">
 		 <h3>Frontend</h3>
                  <ul class="list">
-                   <li>CSS</li>
-                   <li>HTML</li>
+                   <li>Angularjs</li>
+                   <li>React & Redux</li>
+                   <li>HTML & CSS</li>
                    <li>JavaScript</li>
                    <li>jQuery</li>
                  </ul> 
@@ -79,7 +81,9 @@
                <div class="third col-md-3" style="float:left;width:33.3%;">
                   <h3>Other</h3>
                  <ul class="list">
+                   <li>Kafka</li>
                    <li>MySQL</li>
+                   <li>MongoDB</li>
                    <li>GitHub</li>
                    <li>Linux and Windows</li>
                    <li>AJAX</li>
@@ -97,8 +101,9 @@
         <hr class="experience-line">
         <div class="container">
           <div class="col-md-12">
-            <p>Working for <a href="http://www.infanion.com" target="_blank">Infanion software solutions</a> from February 2014 till date.</p>
-            <p>Co-founder of <a href="http://www.preranaconsulting.com" target="_blank">Prerana Consulting</a> from November 2010 to March 2013. Presently <a href="http://ellipsonic.com" target="_blank">Ellipsonic.</a></p>
+            <p>Working for <a href="http://rii.ricoh.com/" target="_blank">Ricoh innovations Pvt Ltd</a> from July 2017 till date.</p>
+            <p>Worked as full stack developer for <a href="http://www.infanion.com" target="_blank">Infanion software solutions</a> from February 2014 to May 2017.</p>
+            <p>Co-founder of <a href="http://www.preranaconsulting.com" target="_blank">Prerana Consulting</a> and <a href="http://www.preranainstitute.com" target="_blank">Prerana Institute</a> from November 2010 to March 2013.</p>
             <p>Free lancing developer for US and India clients, providing them solutions on various platforms.</p>
           </div>
         </div> 
@@ -114,7 +119,7 @@
             <p>Completed Bachelor of engineering from Don bosco institute of technology. <a href="http://www.vtu.ac.in" target="_blank">Vishveshwarya technical university</a></p>
             <p>Completed Bachelor of business administration from adarsh college. <a href="http://www.tnou.ac.in" target="_blank">Tamilnadu open university</a></p>
           </div>
-          <div class="copyright" style="bottom:5px;position:absolute;left:42%;">@copyright Karthik Bharadwaj 2016</div> 
+          <div class="copyright" style="bottom:5px;position:absolute;left:42%;">@copyright Karthik Bharadwaj 2017</div> 
         </div>
       </div>
 
